css/main.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body {
    background: #5DBCD2;
    color: white;
}

p {
    margin: 0;
    padding: 0;
}

header {
    width: 100%;
    height: 60px;
    background: rgb(29, 136, 161);
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    position: fixed;
}

.title {
    float: left;
    margin-left: 200px;
    display: inline-block;
}

.title img {
    max-width: 100%;
}

.search {
    float: left;
    line-height: 60px;
    margin-left: 50px;
    margin-right: 50px;
}

nav {
    float: right;
    height: 60px;
    margin-right: 180px;
    width: auto;
}

nav a {
    float: right;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 30px;
    text-decoration: none;
    color: white;
    padding-right: 20px;
    line-height: 60px;
}

nav a:hover {
    color: #5DBCD2;
}



.headerspacer {
    width: 100%;
    height: 60px;
    background: #1D88A1;
}

.mainbody {
    background: white;
    color: rgb(29, 136, 161);
    width: 80%;
    margin: 0 auto 0 auto;
    padding-top: 0px;
    border: 2px solid #1D88A1;

}

.mainbody img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}

.mainbody h2 {
    padding-left: 25px;
}

.mainbody h1 {
    text-align: center;
}

.mainbody p {
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 10px;
    font-size: 20px;
}



/*Eviction Custome layout*/

.mainbody2 {
    background: white;
    color: rgb(29, 136, 161);
    height: 100%;
    margin: 0 auto 0 auto;
    padding-top: 0px;
    border: 2px solid #1D88A1;

}

.mainbody2 img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}

.mainbody2 h2 {
    padding-left: 25px;
}

.mainbody2 h1 {
    text-align: center;
}

.mainbody2 p {
    padding-left: 50px;
    padding-right: 50px;
    padding-bottom: 10px;
    font-size: 20px;
}
/*end of eviction Custom*/






.topics {
    margin-left: 30%;
}


.footer {
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
    height: 22px;
    background: #1D88A1;
    color: white;
}

.fleft {
    float: left;
    width: 33%;
    text-align: left;
}
.fleft p {
    margin-left: 200px;
}

.fmiddle {
    
    float: left;
    width: 34%;
    text-align: center;
    
}



.fmiddleRep{

    width:100%;
    margin:0 Auto;
    text-align: center;
   padding-top: 15px;
}

.fright {
    float: right;
    width: 33%;
    text-align: right;
}
.fright p {
    margin-right: 200px;
}

#return {
    text-align: right;
    padding-right: 50px;
}

/*footer */

* {
margin: 0;
}
html, body {
height: 100%;
}
.wrapper {
min-height: 100%;
height: auto !important;
height: 100%;
margin: 0 auto -4em;
}
.footer, .push {
height: 4em;
}








/* ---------- MEDIA QUERIES --------------*/

@media (max-width: 1502px) {
    .title {
        margin-left: 150px;
    }
    nav {
        margin-right: 130px;
    }
    .search {
        margin-left: 15px;
        margin-right:15px;
    }
}

@media (max-width: 1332px) {
    nav {
        margin-right: 120px;
    }
    nav a {
        padding-right: 10px;
    }
}

@media (max-width: 1282px) {
    nav a {
        font-size: 24px;
    }
}

@media (max-width: 1197px) {
    nav a {
        font-size: 20px;
        padding-right: 8px;
    }
    .title {
        margin-left: 110px;
    }
}

@media (max-width: 1093px) {
    .title {
        margin-left: 50px;
    }
    nav {
        margin-right: 40px;
    }

}

@media (max-width: 960px) {
    header {
        width: 960px;
        max-width: 100%;
    }
    .title {
        float: none;
        display: block;
        width: 100%;
        margin: auto;
    }
    .title img {
   
    }
    .search {
        float: none;
    }
    nav {
        float: none;
    }

}













/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

